add boilerplate and build scripts for enchanced coqdoc generation (#56)

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.vos
 *.vok
 *.d
+docs
 Makefile.coq
 Makefile.coq.conf
 .depend
@@ -14,3 +15,4 @@ Makefile.coq.conf
 *.v~
 *_eq.v
 _build
+resources/index.html
