basic scripting for generating proof movies (#147)
* basic scripting for generating proof movies

* produce alectryon html files in parallel

* update Dockerfile for Alectryon

* adjust Jenkinsfile for generating and storing documentation with Alectryon

--- a/meta.yml
+++ b/meta.yml
@@ -57,7 +57,7 @@ documentation: |-
   ## Structure
 
   - `Lib`: various extensions to the Coq standard library
-  - `CBC`: Formalizizations for FullNode and LightNode protocols
+  - `CBC`: Formalizations of the FullNode and LightNode protocols
     specified in https://github.com/ethereum/cbc-casper
   - `VLSM`: Formalization of Vlad Zamfir's new, composable, model
     used for stating and solving consensus problems.
@@ -65,4 +65,18 @@ documentation: |-
   See also the latest [online documentation][coqdoc-link] of the Coq files.
 
   [coqdoc-link]: https://runtimeverification.github.io/casper-cbc-proof-docs/docs/latest/coqdoc/toc.html
+
+  ## Generating proof movies
+
+  To generate proof movies via [Alectryon](https://github.com/cpitclaudel/alectryon), first make sure
+  its dependencies are installed:
+  ```
+  opam install coq-serapi
+  python3 -m pip install --user --upgrade pygments dominate beautifulsoup4 docutils
+  ```
+  To generate the Alectryon resources (can potentially take several minutes), run:
+  ```
+  make alectryon
+  ```
+  Then, point your browser at `docs/alectryon`.
 ---
