--- a/Makefile.coq.local
+++ b/Makefile.coq.local
@@ -1,14 +1,22 @@
 GLOBFILES = $(VFILES:.v=.glob)
+VOFILES = $(VFILES:.v=.vo)
+
 CSSFILES = resources/coqdoc.css resources/coqdocjs.css
 JSFILES = resources/config.js resources/coqdocjs.js
 HTMLFILES = resources/header.html resources/footer.html
-COQDOCDIR = docs/coqdoc
-COQ2HTML = coq2html
-COQ2HTMLDIR = docs/coq2html
 
+COQDOCDIR = docs/coqdoc
 COQDOCHTMLFLAGS = --toc --toc-depth 2 --index indexpage --html -s \
   --interpolate --no-lib-name --parse-comments \
   --with-header resources/header.html --with-footer resources/footer.html
+
+COQ2HTML = coq2html
+COQ2HTMLDIR = docs/coq2html
+
+ALECTRYON = ~/alectryon/alectryon.py
+ALECTRYONDIR = docs/alectryon
+ALECTRYONHTMLFLAGS = --frontend coqdoc --webpage-style windowed
+ALECTRYONHTMLFILES = $(VFILES:.v=.alectryon.html)
 
 coqdoc: $(GLOBFILES) $(VFILES) $(CSSFILES) $(JSFILES) $(HTMLFILES)
 	$(SHOW)'COQDOC -d $(COQDOCDIR)'
@@ -25,6 +33,18 @@ coq2html: $(GLOBFILES) $(VFILES)
 	$(HIDE)cd CBC && $(COQ2HTML) -base CasperCBC.CBC -d ../$(COQ2HTMLDIR) *.v *.glob
 	$(HIDE)cd VLSM && $(COQ2HTML) -base CasperCBC.VLSM -d ../$(COQ2HTMLDIR) *.v *.glob
 .PHONY: coq2html
+
+$(ALECTRYONHTMLFILES): %.alectryon.html: %.v %.glob %.vo $(ALECTRYONDIR)/.d
+	$(SHOW)'ALECTRYON --output-directory $(ALECTRYONDIR) $<'
+	$(HIDE)$(ALECTRYON) $(ALECTRYONHTMLFLAGS) $(COQDOCLIBS) --output-directory $(ALECTRYONDIR) $<
+.PHONY: $(ALECTRYONHTMLFILES)
+
+alectryon: $(ALECTRYONHTMLFILES)
+.PHONY: alectryon
+
+$(ALECTRYONDIR)/.d:
+	$(HIDE)mkdir -p $(@D)
+	$(HIDE)touch $@
 
 resources/index.html: resources/index.md
 	pandoc -s -o $@ $<
