--- a/Makefile.coq.local
+++ b/Makefile.coq.local
@@ -4,6 +4,7 @@ VOFILES = $(VFILES:.v=.vo)
 CSSFILES = resources/coqdoc.css resources/coqdocjs.css
 JSFILES = resources/config.js resources/coqdocjs.js
 HTMLFILES = resources/header.html resources/footer.html
+DEPFILES = resources/deps.png resources/map.html
 
 COQDOCDIR = docs/coqdoc
 COQDOCHTMLFLAGS = --toc --toc-depth 2 --index indexpage --html -s \
@@ -18,12 +19,12 @@ ALECTRYONDIR = docs/alectryon
 ALECTRYONHTMLFLAGS = --frontend coqdoc --webpage-style windowed
 ALECTRYONHTMLFILES = $(VFILES:.v=.alectryon.html)
 
-coqdoc: $(GLOBFILES) $(VFILES) $(CSSFILES) $(JSFILES) $(HTMLFILES)
+coqdoc: $(GLOBFILES) $(VFILES) $(CSSFILES) $(JSFILES) $(HTMLFILES) $(DEPFILES)
 	$(SHOW)'COQDOC -d $(COQDOCDIR)'
 	$(HIDE)mkdir -p $(COQDOCDIR)
 	$(HIDE)$(COQDOC) $(COQDOCHTMLFLAGS) $(COQDOCLIBS) -d $(COQDOCDIR) $(VFILES)
 	$(SHOW)'COPY resources'
-	$(HIDE)cp $(CSSFILES) $(JSFILES) $(COQDOCDIR)
+	$(HIDE)cp $(CSSFILES) $(JSFILES) $(DEPFILES) $(COQDOCDIR)
 .PHONY: coqdoc
 
 coq2html: $(GLOBFILES) $(VFILES)
@@ -50,5 +51,21 @@ $(ALECTRYONDIR)/toc.html:
 	done
 	$(HIDE)cat resources/alectryon_toc_footer.html >> $@
 
+deps.dot: $(VFILES)
+	$(SHOW)'GENERATE deps.dot'
+	$(HIDE)./scripts/dotdeps.sh $(VFILES) > $@
+
+deps.map: deps.dot
+	dot -T cmap deps.dot | sed -e 's,>$$,/>,' > deps.map
+
+resources/deps.png: deps.dot
+	dot -T png deps.dot > resources/deps.png
+
+resources/map.html: deps.map
+	sed -e '/#include deps.map/r deps.map' resources/map_template.html > resources/map.html
+
 resources/index.html: resources/index.md
 	pandoc -s -o $@ $<
+
+clean::
+	$(HIDE)rm -f deps.dot deps.map $(DEPFILES) resources/index.html
