Dependency graph landing page for proof movies (#173)
* use alectryon output option to name HTML files after coqdoc conventions

* add dependency graph map for alectryon documentation, fix alectryon directory issue

--- a/Makefile.coq.local
+++ b/Makefile.coq.local
@@ -35,9 +35,9 @@ coq2html: $(GLOBFILES) $(VFILES)
 	$(HIDE)cd VLSM && $(COQ2HTML) -base CasperCBC.VLSM -d ../$(COQ2HTMLDIR) *.v *.glob
 .PHONY: coq2html
 
-$(ALECTRYONHTMLFILES): %.alectryon.html: %.v %.glob %.vo $(ALECTRYONDIR)/toc.html
-	$(SHOW)'ALECTRYON --output-directory $(ALECTRYONDIR) $<'
-	$(HIDE)$(ALECTRYON) $(ALECTRYONHTMLFLAGS) $(COQDOCLIBS) --output-directory $(ALECTRYONDIR) $<
+$(ALECTRYONHTMLFILES): %.alectryon.html: %.v %.glob %.vo $(ALECTRYONDIR)/toc.html $(ALECTRYONDIR)/map.html $(ALECTRYONDIR)/deps.png
+	$(SHOW)'ALECTRYON --output-directory $(ALECTRYONDIR) --output $(ALECTRYONDIR)/$(addsuffix .html,$(addprefix CasperCBC.,$(subst /,.,$(basename $<))))'
+	$(HIDE)$(ALECTRYON) $(ALECTRYONHTMLFLAGS) $(COQDOCLIBS) --output-directory $(ALECTRYONDIR) --output $(ALECTRYONDIR)/$(addsuffix .html,$(addprefix CasperCBC.,$(subst /,.,$(basename $<)))) $<
 .PHONY: $(ALECTRYONHTMLFILES)
 
 alectryon: $(ALECTRYONHTMLFILES)
@@ -46,10 +46,18 @@ alectryon: $(ALECTRYONHTMLFILES)
 $(ALECTRYONDIR)/toc.html:
 	$(HIDE)mkdir -p $(@D)
 	$(HIDE)cat resources/alectryon_toc_header.html > $@
-	$(HIDE)for vfile in $(notdir $(basename $(VFILES))) ; do \
+	$(HIDE)for vfile in $(addprefix CasperCBC.,$(subst /,.,$(basename $(VFILES)))) ; do \
 	    echo "    <li><a href='$$vfile.html'>$$vfile</a></li>" >> $@; \
 	done
 	$(HIDE)cat resources/alectryon_toc_footer.html >> $@
+
+$(ALECTRYONDIR)/map.html: deps.map
+	$(HIDE)mkdir -p $(@D)
+	sed -e '/#include deps.map/r deps.map' resources/map_template.html > $(ALECTRYONDIR)/map.html
+
+$(ALECTRYONDIR)/deps.png: deps.dot
+	$(HIDE)mkdir -p $(@D)
+	dot -T png deps.dot > $(ALECTRYONDIR)/deps.png
 
 deps.dot: $(VFILES)
 	$(SHOW)'GENERATE deps.dot'
