Basic generation of module dependency graphs (#181)
* basic commands for producing module-level dependency graphs with links

* basic make commands for generating svgs via rvdpdgraph, make every module non-empty for it to work

* update Docker and Jenkins file for generation of module-level dep graphs

* remove dpd and dot files by default

* basic linking to module dependency graph in coqdoc

--- a/Makefile.coq.local
+++ b/Makefile.coq.local
@@ -19,6 +19,10 @@ ALECTRYONDIR = docs/alectryon
 ALECTRYONHTMLFLAGS = --frontend coqdoc --webpage-style windowed
 ALECTRYONHTMLFILES = $(VFILES:.v=.alectryon.html)
 
+DPDFILES = $(VFILES:.v=.dpd)
+DOTFILES = $(VFILES:.v=.dot)
+SVGFILES = $(VFILES:.v=.svg)
+
 coqdoc: $(GLOBFILES) $(VFILES) $(CSSFILES) $(JSFILES) $(HTMLFILES) $(DEPFILES)
 	$(SHOW)'COQDOC -d $(COQDOCDIR)'
 	$(HIDE)mkdir -p $(COQDOCDIR)
@@ -75,5 +79,18 @@ resources/map.html: deps.map
 resources/index.html: resources/index.md
 	pandoc -s -o $@ $<
 
+$(DPDFILES): %.dpd: %.v %.glob %.vo
+	echo "Set DependGraph File \"$@\". Print FileDependGraph $(addprefix CasperCBC.,$(subst /,.,$(basename $@)))." | $(COQTOP) $(COQDEBUG) $(COQFLAGS) $(COQLIBS) -require-import-from rvdpdgraph rvdpdgraph -load-vernac-object $(addprefix CasperCBC.,$(subst /,.,$(basename $@))) -quiet > /dev/null 2>&1
+
+$(DOTFILES): %.dot: %.dpd
+	rvdpd2dot -graphname rvdpdgraph -o $@ $<
+
+$(SVGFILES): %.svg: %.dot
+	dot -T svg $< > $(COQDOCDIR)/$(addprefix CasperCBC.,$(subst /,.,$@))
+.PHONY: $(SVGFILES)
+
+rvdpd: $(SVGFILES)
+.PHONY: rvdpd
+
 clean::
-	$(HIDE)rm -f deps.dot deps.map $(DEPFILES) resources/index.html
+	$(HIDE)rm -f deps.dot deps.map $(DEPFILES) $(DPDFILES) $(DOTFILES) resources/index.html
